--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 </head>
 <body>
   <header>
-    <h1><span>Marketplace</span> Strategy 2026</h1>
+    <h1><span>Calendário</span> Sazonal 2026</h1>
     <p>
       Calendário estratégico com todos os marcos sazonais do ano. Use as setas evidenciadas para navegar mês a mês e clique nas datas em dourado para ver as ações recomendadas, categorias prioritárias e o plano visual de preparação.
     </p>
