--- a/index.html
+++ b/index.html
@@ -161,11 +161,22 @@
       text-transform: uppercase;
     }
 
+    .calendar-scroll {
+      width: 100%;
+    }
+
+    .calendar-scroll-inner {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      width: 100%;
+    }
+
     .day-names {
       display: grid;
       grid-template-columns: repeat(7, minmax(0, 1fr));
       gap: 1.2rem;
-      margin-bottom: 1rem;
+      margin: 0;
       text-transform: uppercase;
       font-size: 0.85rem;
       letter-spacing: 0.12rem;
@@ -817,17 +828,24 @@
         gap: 1rem;
       }
 
-      .day-names {
-        grid-template-columns: repeat(7, minmax(70px, 1fr));
-        gap: 0.35rem;
-        font-size: 0.75rem;
+      .calendar-scroll {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        padding-bottom: 0.5rem;
       }
 
+      .calendar-scroll-inner {
+        width: max(100%, 520px);
+      }
+
+      .day-names,
       .calendar-grid {
         grid-template-columns: repeat(7, minmax(70px, 1fr));
         gap: 0.35rem;
-        overflow-x: auto;
-        padding-bottom: 0.5rem;
+      }
+
+      .day-names {
+        font-size: 0.75rem;
       }
 
       .day {
@@ -842,7 +860,7 @@
 </head>
 <body>
   <header>
-    <h1><span>Marketplace</span> Strategy 2026</h1>
+    <h1><span>Calendário</span> Marketplaces 2026</h1>
     <p>
       Calendário estratégico com todos os marcos sazonais do ano. Use as setas evidenciadas para navegar mês a mês e clique nas datas em dourado para ver as ações recomendadas, categorias prioritárias e o plano visual de preparação.
     </p>
@@ -868,17 +886,21 @@
         </button>
       </div>
 
-      <div class="day-names">
-        <span>Dom</span>
-        <span>Seg</span>
-        <span>Ter</span>
-        <span>Qua</span>
-        <span>Qui</span>
-        <span>Sex</span>
-        <span>Sáb</span>
-      </div>
+      <div class="calendar-scroll">
+        <div class="calendar-scroll-inner">
+          <div class="day-names">
+            <span>Dom</span>
+            <span>Seg</span>
+            <span>Ter</span>
+            <span>Qua</span>
+            <span>Qui</span>
+            <span>Sex</span>
+            <span>Sáb</span>
+          </div>
 
-      <div id="calendar-grid" class="calendar-grid" aria-live="polite"></div>
+          <div id="calendar-grid" class="calendar-grid" aria-live="polite"></div>
+        </div>
+      </div>
 
       <div class="legend" aria-hidden="true">
         <span><span class="dot" style="background: linear-gradient(160deg, rgba(253,185,39,0.92), rgba(255,225,140,0.92)); box-shadow: 0 0 12px rgba(253,185,39,0.55);"></span> Datas sazonais oficiais</span>
